Fixed master dropdown alignment in simple mode

--- a/less/customizer.table.less
+++ b/less/customizer.table.less
@@ -9,7 +9,7 @@
 	margin-top:10px;
 	margin-bottom:10px;	
 	display: none;
-	padding:5px;
+
 }
 
 .highed-customizer-table-heading {
